[tool.poetry]
name = "ruspass"
version = "0.1.0"
description = ""
authors = ["eynopv <eynopv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
black = "^23.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
